yaml/hello-word.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-word
spec:
  containers:
  - name: hello-word
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
