yaml/multi-busy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-busy-deployment
  labels:
    app: multi-busy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-busy
  template:
    metadata:
      labels:
        app: multi-busy
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: vol
          mountPath: /output
      - name: busybox
        image: busybox:latest
        command: ['sh', '-c', 'while true; do echo "$(date): BusyBox" >> /output/success.txt; sleep 5; done']
        volumeMounts:
        - name: vol
          mountPath: /output
      volumes:
      - name: vol
        hostPath:
          path: /var/data
