yaml/multi-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-nginx-deployment
  labels:
    app: multi-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-nginx
  template:
    metadata:
      labels:
        app: multi-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
      volumes:
      - name: configmap-volume
        configMap:
          name: conf-nginx
