yaml/multitool-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-nginx-deployment
  labels:
    app: multitool-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multitool-nginx
  template:
    metadata:
      labels:
        app: multitool-nginx
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
