yaml/multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-deployment
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: vol
          mountPath: /output
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: multitool-pvc
