yaml/netology-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netology-web
  labels: 
    web: web
spec:
  containers:
  - name: netology-web
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
