yaml/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html
        - name: secret-volume
          mountPath: /etc/nginx/ssl
          readOnly: true
      volumes:
      - name: configmap-volume
        configMap:
          name: conf-nginx
      - name: secret-volume
        secret:
          secretName: secret
