yaml/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - name: mt
      protocol: TCP
      port: 8080
      targetPort: 8080
