yaml/multi-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-nginx-svc
spec:
  selector:
    app: multi-nginx
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: web2
      protocol: TCP
      port: 8080
      targetPort: 8080
