yaml/netology-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  selector:
    web: web
  ports:
    - name: web
      protocol: TCP
      port: 8080
