yaml/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    app: multitool-nginx
  ports:
    - name: web
      protocol: TCP
      port: 80
      nodePort: 30001
